# tamagotchi

./: .gitignore  CMakeLists.txt  README.md  Tamagotchi.cpp  Tamagotchi.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
assets/: resources.qrc
assets/ressource/: tamagotchiPersonnage.qrc
